[project]
name = "photonics-project_notebooks"
dynamic = ["version"]
requires-python = "~=3.12.0"
dependencies = [
  "colour-science",
  "ipympl",
  "ipyvuetify",
  "ipywidgets",
  "jupytext",
  "matplotlib",
  "numpy",
  "scipy",
  "voila",
]

[dependency-groups]
dev = [
  "autopep8",
  "flake8",
  "nbmake",
  "pre-commit",
  "pytest",
  "watchdog[watchmedo]",
]
